log
Wed 27 Mar 2024 02:00:38 PM UTC: 
 list.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
60024d0
Wed 27 Mar 2024 02:01:23 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
be090ed
Wed 27 Mar 2024 02:05:13 PM UTC: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|0
be9f27b
Wed 27 Mar 2024 02:13:13 PM UTC: 
 list.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
list.c: In function ‘nextList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
list.c: In function ‘lastList’:
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
list.c: In function ‘prevList’:
list.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
228628d
Wed 27 Mar 2024 02:14:02 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
94a1c52
Wed 27 Mar 2024 02:15:24 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
083ba1b
Wed 27 Mar 2024 02:26:47 PM UTC: 
 list.c | 39 ++++++---------------------------------
 1 file changed, 6 insertions(+), 33 deletions(-)
 tests:  2|5
total_score: 15/70
2eefca8
Wed 27 Mar 2024 02:28:56 PM UTC: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccEYKK4X.o: in function `test_last_prev':
test.c:(.text+0x39f): undefined reference to `lastList'
collect2: error: ld returned 1 exit status
Compilation failed
406f041
Wed 27 Mar 2024 02:29:47 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
bbbe727
Wed 27 Mar 2024 02:31:40 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
1d57898
Wed 27 Mar 2024 02:32:45 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
e116c06
Wed 27 Mar 2024 02:36:08 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
4e8bd73
Wed 27 Mar 2024 02:36:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5f56716
Wed 27 Mar 2024 02:36:49 PM UTC: 
 list.c | 31 +++++++++++++------------------
 1 file changed, 13 insertions(+), 18 deletions(-)
 tests:  0|0
ca1862d
Wed 27 Mar 2024 02:37:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
80556b6
Wed 27 Mar 2024 02:37:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a281387
Wed 27 Mar 2024 02:37:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3286abf
Wed 27 Mar 2024 02:38:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0c04314
Wed 27 Mar 2024 02:39:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1d9ff78
Wed 27 Mar 2024 02:51:04 PM UTC: 
 list.c | 19 ++++++++-----------
 1 file changed, 8 insertions(+), 11 deletions(-)
 tests:  0|0
be886e2
Wed 27 Mar 2024 07:48:32 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
c731c7b
Wed 27 Mar 2024 07:49:16 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
7f3099e
Wed 27 Mar 2024 07:50:25 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
2d42df8
Wed 27 Mar 2024 07:53:15 PM UTC: 
 list.c | 26 +++++++++++++++++++++++---
 1 file changed, 23 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:65:34: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   65 |     if (newNode == NULL) {return NULL;}
      |                                  ^~~~
list.c:63:6: note: declared here
   63 | void pushCurrent(List *list, void *data) {
      |      ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cd0b668
Wed 27 Mar 2024 07:53:45 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
f66fa37
